Try using native browser <progress> element for run log.
