# openpectus/aggregator/routers/process_unit.py
@@ -173,7 +173,7 @@ async def execute_command(unit_id: str, command: ExecutableCommand, agg: Aggrega
         cmd_name, cmd_args = split[0], split[1]  # TODO watch out for "" vs None as cmd_args
     else:
         cmd_name, cmd_args = cmd_line, None
-    
+
     msg = InvokeCommandMsg(name=cmd_name, arguments=cmd_args)
     await agg.send_to_client(client_id=unit_id, msg=msg)
 
@@ -208,7 +208,8 @@ class RunLogColumn(BaseModel):
 class RunLogLine(BaseModel):
     command: ExecutableCommand
     start: datetime
-    end: datetime
+    end: datetime | None
+    progress: float | None
     additional_values: List[str | int | float]
 
 
